growing-shop-auth/src/main/java/com/example/growingshopauth/config/error/exception/NotAllowPathException.java
package com.example.growingshopauth.config.error.exception;

public class NotAllowPathException extends RuntimeException {
    public NotAllowPathException(String message) {
        super(message);
    }
}
